# CS406ScriptTEst

.github/workflows/: compare_optimality.yml
contree/: baseline.txt  baseline_results.txt  create_baseline.py
contree/code/: CMakeLists.txt  main.cpp
contree/code/DataStructures/include/: dataview.h  gpu_dataview.h  gpu_structs.h
contree/code/DataStructures/src/: dataset.cu  dataset_transfer.cu  dataview.cpp  gpu_dataview.cu
contree/code/Engine/include/: gpu_solver.cuh
contree/code/Engine/src/: general_solver.cpp  gpu_solver.cu  specialized_solver.cpp
contree/code/Utilities/: verify_optimality.py
